--- a/functions/package.json
+++ b/functions/package.json
@@ -13,6 +13,8 @@
     "node": "8"
   },
   "dependencies": {
+    "dotenv": "^8.0.0",
+    "firebase": "^6.3.3",
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^3.1.0"
   },
