--- a/functions/package.json
+++ b/functions/package.json
@@ -13,6 +13,7 @@
     "node": "8"
   },
   "dependencies": {
+    "cors": "2.8.5",
     "dotenv": "^8.0.0",
     "firebase": "^6.3.3",
     "firebase-admin": "^8.0.0",
