--- a/functions/package.json
+++ b/functions/package.json
@@ -16,7 +16,7 @@
     "cors": "2.8.5",
     "dotenv": "^8.0.0",
     "firebase": "^6.3.3",
-    "firebase-admin": "^8.0.0",
+    "firebase-admin": "8.3.0",
     "firebase-functions": "^3.1.0"
   },
   "devDependencies": {
