--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ REACT_APP_FIREBASE_PROJECT_ID="peifrontend"
 REACT_APP_FIREBASE_STORAGE_BUCKET=""
 REACT_APP_FIREBASE_SENDER_ID="124463288183"
 REACT_APP_ID="1:124463288183:web:2adba54c70938b88"
+ID="1:124463288183:web:2adba54c70938b88"
+SERVICE_ACCOUNT_ID="firebase-adminsdk-ilsy7@peifrontend.iam.gserviceaccount.com";
